fix for phonegap

--- a/css/app.css
+++ b/css/app.css
@@ -42,17 +42,17 @@
   padding-left: 0;
 }
 .hero-list .hero-str {
-  background: url('/data/images/heropedia/overviewicon_str.png') no-repeat 10px 60%;
+  background: url('data/images/heropedia/overviewicon_str.png') no-repeat 10px 60%;
   background-size: 25px;
   padding-left: 2.5em;
 }
 .hero-list .hero-agi {
-  background: url('/data/images/heropedia/overviewicon_agi.png') no-repeat 10px 60%;
+  background: url('data/images/heropedia/overviewicon_agi.png') no-repeat 10px 60%;
   background-size: 25px;
   padding-left: 2.5em;
 }
 .hero-list .hero-int {
-  background: url('/data/images/heropedia/overviewicon_int.png') no-repeat 10px 60%;
+  background: url('data/images/heropedia/overviewicon_int.png') no-repeat 10px 60%;
   background-size: 25px;
   padding-left: 2.5em;
 }
@@ -62,49 +62,49 @@
   letter-spacing: -1px;
 }
 .hero-stat .hero-stat-str {
-  background: url('/data/images/heropedia/overviewicon_str.png') no-repeat 0px 50%;
+  background: url('data/images/heropedia/overviewicon_str.png') no-repeat 0px 50%;
   background-size: 15px;
   padding-left: 1.5em;
   color: #a85141;
 }
 .hero-stat .hero-stat-agi {
-  background: url('/data/images/heropedia/overviewicon_agi.png') no-repeat 0px 50%;
+  background: url('data/images/heropedia/overviewicon_agi.png') no-repeat 0px 50%;
   background-size: 15px;
   padding-left: 1.5em;
   color: #49a840;
 }
 .hero-stat .hero-stat-int {
-  background: url('/data/images/heropedia/overviewicon_int.png') no-repeat 0px 50%;
+  background: url('data/images/heropedia/overviewicon_int.png') no-repeat 0px 50%;
   background-size: 15px;
   padding-left: 1.5em;
   color: #429dc4;
 }
 .hero-stat .hero-stat-attack {
-  background: url('/data/images/heropedia/overviewicon_attack.png') no-repeat 0% 50%;
+  background: url('data/images/heropedia/overviewicon_attack.png') no-repeat 0% 50%;
   background-size: 16px;
   padding-left: 1.5em;
   color: #cc2511;
 }
 .hero-stat .hero-stat-speed {
-  background: url('/data/images/heropedia/overviewicon_speed.png') no-repeat 0% 50%;
+  background: url('data/images/heropedia/overviewicon_speed.png') no-repeat 0% 50%;
   background-size: 20px;
   padding-left: 1.6em;
   color: #478f24;
 }
 .hero-stat .hero-stat-armor {
-  background: url('/data/images/heropedia/overviewicon_defense.png') no-repeat 0% 50%;
+  background: url('data/images/heropedia/overviewicon_defense.png') no-repeat 0% 50%;
   background-size: 12px;
   padding-left: 1.1em;
   color: #d39511;
 }
 .hero-stat .hero-stat-range {
-  background: url('/data/images/heropedia/meanicons_55-32.png') no-repeat 0% 50%;
+  background: url('data/images/heropedia/meanicons_55-32.png') no-repeat 0% 50%;
   background-size: 14px;
   padding-left: 1.3em;
   color: #187c93;
 }
 .hero-stat .hero-stat-sight {
-  background: url('/data/images/heropedia/view_eye_sight-32.png') no-repeat 0% 50%;
+  background: url('data/images/heropedia/view_eye_sight-32.png') no-repeat 0% 50%;
   background-size: 12px;
   padding-left: 1.1em;
   color: #187c93;
